Segundo commit - css

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
     <head>
         <title>Practica CSS</title>
+        <link rel="stylesheet" type="text/css" href="estilos.css"/>
     </head>
     <body>
-        <h1>Probando GIT</h1>
+        <h1 id="estilo">Probando GIT - con estilo</h1>
+        <h1>Sin estilo</h1>
+        <h2>titulo</h2>
     </body>
 </html>
