Cuarto commit - css

--- a/Javascript.html
+++ b/Javascript.html
@@ -15,7 +15,8 @@
     <br>
 
     <div align="right">
-      Login <input class="redondeado" type="email" placeholder="Email" /> <input class="redondeado" type="password" placeholder="Password" />
+      Login <input class="redondeado" type="email" placeholder="Email" /> <input class="redondeado" type="password"
+        placeholder="Password" />
     </div>
   </nav>
   <header>
@@ -65,7 +66,8 @@
         </tr>
         <tr>
           <td class="topico">Paradigma</td>
-          <td class="descripcion">Multiparadigma, programación funcional, programación basada en prototipos, imperativo, interpretado
+          <td class="descripcion">Multiparadigma, programación funcional, programación basada en prototipos, imperativo,
+            interpretado
             (scripting)</td>
         </tr>
         <tr>
