--- a/TP Final/index.html
+++ b/TP Final/index.html
@@ -13,70 +13,70 @@
         <div>Turno: </div>
         <div id="turno"></div>
       </div>
-      <div id="tablero">
+      <div id="tablero"></div>
         <table>
           <tr>
-            <td><div class="flecha" id="columna1"></td>
-            <td><div class="flecha" id="columna2"></td>
-            <td><div class="flecha" id="columna3"></td>
-            <td><div class="flecha" id="columna4"></td>
-            <td><div class="flecha" id="columna5"></td>
-            <td><div class="flecha" id="columna6"></td>
-            <td><div class="flecha" id="columna7"></td>
+            <td><div class="flecha" id="columna1"></div></td>
+            <td><div class="flecha" id="columna2"></div></td>
+            <td><div class="flecha" id="columna3"></div></td>
+            <td><div class="flecha" id="columna4"></div></td>
+            <td><div class="flecha" id="columna5"></div></td>
+            <td><div class="flecha" id="columna6"></div></td>
+            <td><div class="flecha" id="columna7"></div></td>
           </tr>  
           <tr>
-            <td><div class="hueco" id="celda11"></td>
-            <td><div class="hueco" id="celda21"></td>
-            <td><div class="hueco" id="celda31"></td>
-            <td><div class="hueco" id="celda41"></td>
-            <td><div class="hueco" id="celda51"></td>
-            <td><div class="hueco" id="celda61"></td>
-            <td><div class="hueco" id="celda71"></td>
+            <td><div class="hueco" id="celda11"></div></td>
+            <td><div class="hueco" id="celda21"></div></td>
+            <td><div class="hueco" id="celda31"></div></td>
+            <td><div class="hueco" id="celda41"></div></td>
+            <td><div class="hueco" id="celda51"></div></td>
+            <td><div class="hueco" id="celda61"></div></td>
+            <td><div class="hueco" id="celda71"></div></td>
           </tr>
           <tr>
-            <td><div class="hueco" id="celda12"></td>
-            <td><div class="hueco" id="celda22"></td>
-            <td><div class="hueco" id="celda32"></td>
-            <td><div class="hueco" id="celda42"></td>
-            <td><div class="hueco" id="celda52"></td>
-            <td><div class="hueco" id="celda62"></td>
-            <td><div class="hueco" id="celda72"></td>
+            <td><div class="hueco" id="celda12"></div></td>
+            <td><div class="hueco" id="celda22"></div></td>
+            <td><div class="hueco" id="celda32"></div></td>
+            <td><div class="hueco" id="celda42"></div></td>
+            <td><div class="hueco" id="celda52"></div></td>
+            <td><div class="hueco" id="celda62"></div></td>
+            <td><div class="hueco" id="celda72"></div></td>
           </tr>
           <tr>
-            <td><div class="hueco" id="celda13"></td>
-            <td><div class="hueco" id="celda23"></td>
-            <td><div class="hueco" id="celda33"></td>
-            <td><div class="hueco" id="celda43"></td>
-            <td><div class="hueco" id="celda53"></td>
-            <td><div class="hueco" id="celda63"></td>
-            <td><div class="hueco" id="celda73"></td>
+            <td><div class="hueco" id="celda13"></div></td>
+            <td><div class="hueco" id="celda23"></div></td>
+            <td><div class="hueco" id="celda33"></div></td>
+            <td><div class="hueco" id="celda43"></div></td>
+            <td><div class="hueco" id="celda53"></div></td>
+            <td><div class="hueco" id="celda63"></div></td>
+            <td><div class="hueco" id="celda73"></div></td>
           </tr>
           <tr>
-            <td><div class="hueco" id="celda14"></td>
-            <td><div class="hueco" id="celda24"></td>
-            <td><div class="hueco" id="celda34"></td>
-            <td><div class="hueco" id="celda44"></td>
-            <td><div class="hueco" id="celda54"></td>
-            <td><div class="hueco" id="celda64"></td>
-            <td><div class="hueco" id="celda74"></td>
+            <td><div class="hueco" id="celda14"></div></td>
+            <td><div class="hueco" id="celda24"></div></td>
+            <td><div class="hueco" id="celda34"></div></td>
+            <td><div class="hueco" id="celda44"></div></td>
+            <td><div class="hueco" id="celda54"></div></td>
+            <td><div class="hueco" id="celda64"></div></td>
+            <td><div class="hueco" id="celda74"></div></td>
           </tr>
           <tr>
-            <td><div class="hueco" id="celda15"></td>
-            <td><div class="hueco" id="celda25"></td>
-            <td><div class="hueco" id="celda35"></td>
-            <td><div class="hueco" id="celda45"></td>
-            <td><div class="hueco" id="celda55"></td>
-            <td><div class="hueco" id="celda65"></td>
-            <td><div class="hueco" id="celda75"></td>
+            <td><div class="hueco" id="celda15"></div></td>
+            <td><div class="hueco" id="celda25"></div></td>
+            <td><div class="hueco" id="celda35"></div></td>
+            <td><div class="hueco" id="celda45"></div></td>
+            <td><div class="hueco" id="celda55"></div></td>
+            <td><div class="hueco" id="celda65"></div></td>
+            <td><div class="hueco" id="celda75"></div></td>
             </tr>
           <tr>
-            <td><div class="hueco" id="celda16"></td>
-            <td><div class="hueco" id="celda26"></td>
-            <td><div class="hueco" id="celda36"></td>
-            <td><div class="hueco" id="celda46"></td>
-            <td><div class="hueco" id="celda56"></td>
-            <td><div class="hueco" id="celda66"></td>
-            <td><div class="hueco" id="celda76"></td>
+            <td><div class="hueco" id="celda16"></div></td>
+            <td><div class="hueco" id="celda26"></div></td>
+            <td><div class="hueco" id="celda36"></div></td>
+            <td><div class="hueco" id="celda46"></div></td>
+            <td><div class="hueco" id="celda56"></div></td>
+            <td><div class="hueco" id="celda66"></div></td>
+            <td><div class="hueco" id="celda76"></div></td>
             </tr>
         </table>
       </div>
